--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 server.port=8887
 spring.application.name=amdb
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/webmovielib
+spring.datasource.username=command
+spring.datasource.password=command
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Data Initialization
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
